* Renamed `MergeElementStep` to `MergeElementStep` as it is a base class to `mergeV()` and `mergeE()`.
* Renamed `MergeStep` of `merge()` to `MergeElementStep` for consistency.
* Modified `RepeatUnrollStrategy` to use a more conservative approach, only unrolling repeat loops containing safe navigation and filtering steps.

== TinkerPop 3.7.0 (Gremfir Master of the Pan Flute)

image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/images/gremlin-zamfir.png[width=185]

[[release-3-7-5]]
=== TinkerPop 3.7.5 (Release Date: NOT OFFICIALLY RELEASED YET)

* Improved Java driver host availability on connection pool initialization.
* Added getter for `parameterItems` and `valueTraversal` on `DifferenceStep`.
* Added properties to `Element` objects found in a `Path` for GraphSON v2 and v3 and GraphBinary.
* Fixed edge properties for GraphBinary which were not deserializing properly.
* Bump netty to 4.1.125.Final

[[release-3-7-4]]
=== TinkerPop 3.7.4 (Release Date: August 1, 2025)

* Fixed bug in server `Settings` where it was referencing a property that was back in 3.3.0 and generating a warning log.
* Improved performance of `Traversal.lock()` which was being called excessively.
* Added log entry in `WsAndHttpChannelizerHandler` to catch general errors that escape the handlers.
* Improved invalid plugin error message in Gremlin Console.
* Added a `MessageSizeEstimator` implementation to cover `Frame` allowing Gremlin Server to better estimate message sizes for the direct buffer.
* Fixed bug in Gremlin Console for field accessor issue with JDK17.
* Improved logging around triggers of the `writeBufferHighWaterMark` so that they occur more than once but do not excessively fill the logs.
* Added server metrics to help better detect and diagnose write pauses due to the `writeBufferHighWaterMark`: `channels.paused`, `channels.total`, and `channels.write-pauses`.